feat: v1 com comentarios
