# versao html/backend/models/interfaces/IVagas.ts
@@ -1,0 +1,7 @@
+
+export interface IVagas {
+    idDaEmpresa: string;
+    nomeEmpresa: string;
+    tituloVaga: string; 
+    salario: number;
+}
